# space_shooter

./: .gitignore  CMakeLists.txt  README.md  TODO
src/: asteroids_coordinator.c  asteroids_coordinator.h  cannon.c  cannon.h  compare_float.c  compare_float.h  float_compare.c  game.c  game.h  keys.h  main.c  space_ship.c  space_ship.h  utils.c  utils.h
